--- a/lbs/prisecommande/src/composer.json
+++ b/lbs/prisecommande/src/composer.json
@@ -3,7 +3,8 @@
   "require" : {
 	"php": ">=7.0",
 	"slim/slim": "^3.0",
-	"illuminate/database": "^5.5"
+	"illuminate/database": "^5.5",
+	"firebase/php-jwt": "^5.0.0"
 	
 },
 
