--- a/lbs/prisecommande/src/composer.json
+++ b/lbs/prisecommande/src/composer.json
@@ -4,6 +4,7 @@
 	"php": ">=7.0",
 	"slim/slim": "^3.0",
 	"illuminate/database": "^5.5",
+	"ramsey/uuid": "^3.8",
 	"firebase/php-jwt": "^5.0.0"
 	
 },
