--- a/lbs/prisecommande/src/composer.json
+++ b/lbs/prisecommande/src/composer.json
@@ -5,7 +5,8 @@
 	"slim/slim": "^3.0",
 	"illuminate/database": "^5.5",
 	"ramsey/uuid": "^3.8",
-	"firebase/php-jwt": "^5.0.0"
+	"firebase/php-jwt": "^5.0.0",
+    "guzzlehttp/guzzle": "^6.3"
 	
 },
 
